--- a/main_app/templates/games.html
+++ b/main_app/templates/games.html
@@ -4,15 +4,33 @@
 
 {% block content %}
 
-{% comment %} {% if user.is_authenticated %}
-  <a href='{% url 'games_create' %}'>Add a Game</a><br><br><hr><br>
-  {% endif %}
-{% endcomment %}
+
+
+
 
 <main class="bg-blue-300 bg-auto h-full w-full">
+
+{% if user.is_authenticated %}
+  <div class=" flex flex-row justify-center">
+    <a href='{% url 'games_create' %}'>
+      <div class="rounded-full py-3 px-6 w-32 shadow-2xl border-2 bg-yellow-600 text-white hover:border-yellow-500 text-center mt-8">
+            Add Event
+      </div>
+    </a>
+  </div>
+{% else %}
+<div class=" flex flex-row justify-center">
+    <a href='{% url 'register' %}'>
+      <div class="rounded-full py-3 px-6 shadow-2xl border-2 bg-yellow-600 text-white hover:border-yellow-500 text-center mt-8">
+            Login as an organizer to add/update events.
+      </div>
+    </a>
+  </div>
+{% endif %}
+
   <div class="w-screen flex flex-row flex-wrap items-center justify-evenly">
   {% for game in games %}
-    <div class="rounded-lg shadow-2xl my-10 mx-4">
+    <div class="rounded-lg shadow-2xl my-10 mx-4 border">
         <div class="bg-gray-100 rounded-lg w-72">
             <img src="{% static 'images/cardimg.jpeg' %}" alt=""
                 class="w-full h-48 transition duration-300 rounded-t-lg sm:h-56 opacity-80 hover:opacity-100"/>
