--- a/main_app/templates/games.html
+++ b/main_app/templates/games.html
@@ -8,7 +8,7 @@
 
 
 
-<main class="bg-blue-300 bg-auto h-full w-full">
+<main class="bg-blue-300 bg-cover h-full w-full" id="gamesbg">
 
 {% if user.is_authenticated %}
   <div class=" flex flex-row justify-center">
