--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -65,7 +65,7 @@
       </li>
       {% else %}
       <li class="border-b-2 border-transparent hover:border-gray-800">
-        <a href="{% url 'register' %}" class="flex flex-row items-center h-12 text-yellow-800 hover:text-gray-800">
+        <a href="{% url 'login' %}" class="flex flex-row items-center h-12 text-yellow-800 hover:text-gray-800">
           <span class="inline-flex items-center justify-center h-12 w-12 text-xl text-red-600 "><i class="bx bx-log-in"></i></span>
           <span class="text-xl font-medium mr-4">Login</span>
         </a>
