--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" 
       type="image/png" 
-      href="{% static '/images.favicon.png' %}">
+      href="{% static 'images/favicon.ico' %}">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> 
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" />
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
