--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -2,19 +2,23 @@
 
 {% block content %}
 
-<div class="">
+<div class="heightMinusNav bg-cover" id="formbg">
   <section class="flex flex-col items-center">
     <form  
       method="post" 
-      class="border w-2/5 mt-20">
-      <h1>Login</h1>
+      class="border w-2/5 mt-20 bg-gray-50 opacity-70 hover:opacity-80 text-center font-semibold rounded">
+      <div class="text-2xl py-4">Login</div>
       {% csrf_token %}
       {{ form.as_p }}
       <input type="hidden" name="next" value="{{ next }}">
-      <button type="submit" class="btn submit">Login</button>
+      <button type="submit" class="btn submit">
+        <div class="rounded-full py-3 px-6 w-24 shadow-2xl hover:shadow-none border-2 border-red-600 hover:border-yellow-500 text-center my-3">
+          Login
+        </div>
+      </button>
     </form>
-    <div>
-    New User? Register <a href="{% url 'signup' %}">here</a>
+    <div class="bg-gray-50 opacity-80 hover:opacity-90 mt-20 p-5 rounded text-2xl">
+    New User? Register <a href="{% url 'signup' %}" class="underline text-blue-500 hover:text-blue-400 ">HERE</a>
     </div>
   </section>
 </div>
