--- a/main_app/templates/main_app/game_confirm_delete.html
+++ b/main_app/templates/main_app/game_confirm_delete.html
@@ -11,13 +11,13 @@
       {% csrf_token %}
       <div class="flex flex-row my-10 justify-center"> 
         <button type="submit">
-          <div class="rounded-full py-3 px-6 w-24 shadow-inner border-2 border-red-600   hover:border-yellow-500 mr-10 text-center">
-            Confirm
+          <div class="rounded-full py-3 px-6 w-24 shadow-inner border-2 border-red-600 flex flex-row justify-center hover:border-yellow-500 mr-10 text-center">
+            <div>Confirm</div>
           </div>
         </button>
         <a href="{% url 'games_detail' game.id %}">
-          <div class="rounded-full py-3 px-6 w-24 shadow-inner border-2 border-red-600   hover:border-yellow-500 mr-10 text-center">
-            Cancel
+          <div class="rounded-full py-3 px-6 w-24 shadow-inner border-2 border-red-600 flex flex-row justify-center hover:border-yellow-500 mr-10 text-center">
+            <div>Cancel</div>
           </div>
         </a>
       </div>
