--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,6 +15,8 @@
   <title>
     NASGA
   </title>
+  {% block head %}
+  {% endblock %}
 </head>
 <body class="h-screen flex flex-col">
 {% comment %} Nav Bar {% endcomment %}
