--- a/main_app/templates/main_app/game_form.html
+++ b/main_app/templates/main_app/game_form.html
@@ -1,5 +1,19 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+{% block head %}
+<link 
+  href="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.css" 
+  rel="stylesheet" 
+/>
+<script 
+  src="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.js"
+>
+</script>
+<script defer src="{% static 'js/games_detail.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 <div class="bg-blue-300 heightMinusNav bg-cover" id="formbg">
 <div class="flex flex-row justify-center mt-40">
