--- a/main_app/templates/games_detail.html
+++ b/main_app/templates/games_detail.html
@@ -33,7 +33,7 @@
     </div>
     {% endif %}
 
-    {% if user.is_authenticated %}
+    {% if game.user == user %}
     <div class="flex flex-row my-10 justify-center">
       <a href="{% url 'games_update' game.id %}" class="">
         <div class="rounded-full py-3 px-6 w-24 shadow-inner border-2 border-red-600   hover:border-yellow-500 mr-10 text-center">
